# keywordSpotting

./: .gitignore  CMakeLists.txt  symbol.lst
audio_tool/: README.md  record  sox.sh  test.sh
conf/: decoder_config.ini  kws_config.ini
example/: CMakeLists.txt  Makefile  audiofile.c  audiofile.h  cmake_install.cmake  demo.cpp  file_utils.cc  file_utils.h  readme.txt
headfile/: hisf_alg.h
include/: kws_sdk.h
model/: kw_label_1000_1.txt  kw_label_1000_2.txt  kw_label_1200_1.txt  kw_model_1000_1.pb  kw_model_1000_2.pb  kw_model_1200_1.pb
record_demo/: CMakeLists.txt  Makefile  cmake_install.cmake  record.cpp
src/: interface_define.h  kws_sdk.cc
src/decoder/: recognize_commands.cc  recognize_commands.h  tf_decoder_wrapper.cpp  tf_decoder_wrapper.h
src/engine/: kws_engine.cpp  kws_engine.h  kws_factory.cpp  kws_factory.h
src/frontEnd_DSP/: dsp_wrapper.cpp  dsp_wrapper.h
src/kwslog/: log.cpp  log.hpp
src/record/: speech_record_thread.cpp  speech_record_thread.h  tinyalsa_record.cpp  tinyalsa_record.h
src/util/: audio_format_trans.cpp  audio_format_trans.h  kws_cir_buff.hpp  kws_cir_buff_test.cc  kws_lock.cpp  kws_lock.h  kws_thread.cpp  kws_thread.h  ptr_operation.hpp  stringHandle.cpp  stringHandle.h
src/util/fft_resample/: fft_resample.cpp  fft_resample.h  fft_resample_test.cpp  stb_fft.cc  stb_fft.h
